syntax = "proto3";
package Protocol;

enum EPacketProtocol
{
	PACKET_PROTOCOL_START		= 0;
	CS_ChatRequest				= 1;
	SC_ChatResponse				= 2;
	PACKET_PROTOCOL_END			= 65535;
}

enum EDBProtocol
{
	DB_PROTOCOL_START			= 0;
	SGDB_ServerStart			= 1;
	DB_PROTOCOL_END				= 65535;
}